making LHS a function and adding instructions

--- a/doc/talk.tex
+++ b/doc/talk.tex
@@ -116,6 +116,31 @@ By definition, inner product with respect to certain distribution is:
 \end{frame}
 %-------------------------------------------------------------
 %---------------------------------------------------------------------------%
+\section{Instructions for LHS script}
+\begin{frame}
+\frametitle{Instructions for LHS script}
+To run LHS\_UQ you just nead to do the following:
+ \begin{itemize}
+ 
+ \item Open a python interpreter by typing python on your terminal.
+ 
+ \item To load the LHS\_UQ function type: from LHS import LHS\_UQ 
+ 
+ \item To run the function you need to provide the following arguments by typing:\newline LHS\_UQ(num\_samples , min\_wat\_cont , range\_ wat\_cont , min\_temp ,range\_temp):
+   \begin{enumerate}
+ \item number of samples
+ \item minimum of water content
+ \item range of water content
+ \item minimum of temperature
+ \item range of temperature
+ \end{enumerate}
+
+ \end{itemize}
+
+\end{frame}
+%-------------------------------------------------------------
+%---------------------------------------------------------------------------%
+\section{Instructions for PCQ script}
 \begin{frame}
 \frametitle{Instructions for PCQ script}
 The basic procedure of running the PCQ script:
