--- a/doc/talk.tex
+++ b/doc/talk.tex
@@ -89,7 +89,7 @@ Generating a sample set of uncertain values from equally probable intervals of t
 \section{Instructions for LHS script}
 \begin{frame}
 \frametitle{Instructions for LHS script}
-To run LHS\_UQ you just need to do the following:
+Scripts are available for downloads and are easily customized to run problems other than the demo problems. To run the LHS\_UQ you just need to do the following:
  \begin{itemize}
  
  \item Open a python interpreter by typing python on your terminal.
@@ -115,7 +115,7 @@ The basic idea comes from projection theory that each function can be written as
      h(\eta)= \sum_{i=1}^\infty a_i \Psi_i (\eta) \label{eq:pcq-expansion}  
 \end{equation}
 So any uncertain parameter in the model can be expressed as above. \\
-The inner product of $h(\eta)$ and $j$th basis function $\psi_j$ is $<h(\eta), \Psi_j (\eta) > \equiv \int_{-\infty}^{\infty} h(\eta) \Psi_j (\eta) \rho(\eta) d \eta $ $\rho(x)$ is a weight function
+The inner product of $h(\eta)$ and $j$th basis function $\psi_j$ is $<h(\eta), \Psi_j (\eta) > \equiv \int_{-\infty}^{\infty} h(\eta) \Psi_j (\eta) \rho(\eta) d \eta $, $\rho(x)$ is a weight function
 \begin{equation}
      <h(\eta), \Psi_j (\eta) >= <\sum_i a_i \Psi_i (\eta), \Psi_j (\eta)>\label{eq:pcq-inner-product}
 \end{equation}
@@ -136,33 +136,45 @@ By definition, inner product with respect to certain distribution is:
 \begin{equation}
 \begin{split}
       <h(\eta), \Psi_j (\eta) > &= \int_{-\infty}^{\infty} h(\eta) \Psi_j (\eta) \rho(\eta) d \eta \\
-      &= \sum_i h(\eta_i) \Psi_j (\eta_i) w_i 
+      &\approx \sum_{i=1}^{N_q} h(\eta_i) \Psi_j (\eta_i) \rho(\eta_i) w_i 
 \end{split} \label{eq:pcq-gaussian-h} 
 \end{equation}
 \begin{equation}
-      <\Psi_j (\eta), \Psi_j (\eta) > = \sum_k \Psi_j (\eta_k) \Psi_j (\eta_k) w_k \label{eq:pcq-gaussian-psi} 
+      <\Psi_j (\eta), \Psi_j (\eta) > \approx \sum_{k=1}^{N_q} \Psi_j (\eta_k) \Psi_j (\eta_k) \rho(\eta_i)w_k \label{eq:pcq-gaussian-psi} 
 \end{equation}
 \end{frame}
 %-------------------------------------------------------------
+\begin{frame}
+\frametitle{Polynomial Chaos Quadrature (PCQ)}
+When we have multiple variable i.e. $h(\eta,\phi, ...)$ we can form basis functions by a tensor product. While reasonable for small dimensions the
+number of basis functions and quadrature points rises as $(N_q)^d$ -- the famous {\it curse of dimensionality}. Fixes include
+\begin{itemize}
+\item Sparse Grid
+\item CUT
+\end{itemize}
+\end{frame}
 %---------------------------------------------------------------------------%
 \begin{frame}
 \frametitle{Polynomial Chaos Quadrature (PCQ)}
-For some cases the orthogonality of basis can not be guaranteed, then the following system of equations (j=1..N)  need to be solved for coefficient evaluation.
+For some cases the orthogonality of basis can not be guaranteed, then the following system of equations (j=1..N)  need to be solved for evaluating coefficients $a_i$.
 %\begin{equation}
 % h(\eta_k)= \sum_i a_i \Psi_i (\eta_k) 
 % \label{eq:system-eq}
 %\end{equation}
 
-\begin{equation}
-    <\sum_i a_i \Psi_i (\eta), \Psi_j (\eta)>   = <h(\eta), \Psi_j (\eta) >
-\end{equation}
+\begin{eqnarray*}
+   < \Psi_1 (\eta), \Psi_1 (\eta)>a_1+ ... +<\Psi_N(\eta),\Psi_1(\eta)> a_N  &= &<h(\eta), \Psi_1(\eta) > \\
+   < \Psi_1 (\eta), \Psi_2 (\eta)> a_1+ ... +<\Psi_N(\eta),\Psi_2(\eta)> a_N    &=& <h(\eta), \Psi_2 (\eta) > \\
+   < \Psi_1 (\eta), \Psi_3 (\eta)> a_1+ ... +<\Psi_N(\eta),\Psi_3(\eta)> a_N    &=& <h(\eta), \Psi_3 (\eta) > \\
+   ... &=  & ... \\
+\end{eqnarray*}
 \end{frame}
 %-------------------------------------------------------------
 %---------------------------------------------------------------------------%
 \section{Instructions for PCQ script}
 \begin{frame}
 \frametitle{Instructions for PCQ script (quick start)}
-To run PCQ\_UQ you just nead to do the following:
+To run PCQ\_UQ you just need to do the following:
  \begin{itemize}
  
  \item Open a python interpreter by typing python on your terminal.
