--- a/doc/talk.tex
+++ b/doc/talk.tex
@@ -147,10 +147,12 @@ By definition, inner product with respect to certain distribution is:
 \begin{frame}
 \frametitle{Polynomial Chaos Quadrature (PCQ)}
 When we have multiple variable i.e. $h(\eta,\phi, ...)$ we can form basis functions by a tensor product. While reasonable for small dimensions the
-number of basis functions and quadrature points rises as $(N_q)^d$ -- the famous {\it curse of dimensionality}. Fixes include
+number of basis functions and quadrature points rises as $(N_q)^d$ -- the famous {\it curse of dimensionality}. 
+
+Fixes include
 \begin{itemize}
 \item Sparse Grid
-\item CUT
+\item Conjugate Unscented Transform (CUT)
 \end{itemize}
 \end{frame}
 %---------------------------------------------------------------------------%
