--- a/Emulator/tutorial/emulator.tex
+++ b/Emulator/tutorial/emulator.tex
@@ -113,7 +113,7 @@ In order to analyze the performance of the constructed model, following visualiz
 \vspace{4mm}
 Based on the visualizations for the gaussian mean surface as well as plots for the residuals and standard error, the decisions regarding the underlying correlation structure could be made\\
 \vspace{2mm}
-The values for Variance and Mean residuals also help in determining the most suitable correlation function 
+The value for Mean residuals also help in determining the most suitable correlation function 
 \end{frame}
 
 %---------------------------------------------------------------------------%
@@ -130,6 +130,18 @@ The values for Variance and Mean residuals also help in determining the most sui
 
 \end{frame}
 
+
+
+
+\section{References}
+\begin{frame}
+\frametitle{References}
+\begin{itemize}
+\item T. J. Santner, B. J. Williams and W. I. Notz (2003). The Design and Analysis of Computer Experiments, Springer Verlag, New York.
+\item Runze Li and Agus Sudjianto (2005). Analysis of Computer Experiments Using Penalized Likelihood in Gaussian Kriging Models, Technometrics, Volume 47, number 2, pages 111-120.
+\end{itemize}
+
+\end{frame}
 
 
 
