--- a/Emulator/tutorial/emulator.tex
+++ b/Emulator/tutorial/emulator.tex
@@ -21,7 +21,7 @@
 
 \begin{document}
 \title {\bfseries{\sc Emulator for Hazard Analysis:\\ A Usage tutorial}}
-\author {Prof. Abani Patra}
+\author {}
 \institute{University	at	Buffalo }
 \date{\small 15-17 March , 2016} 
 %--------------------------------------------------------------------------%
@@ -56,8 +56,8 @@ Some features of the presented model are:\\
 
 \section{MPErK}
 \begin{frame}
-\frametitle{MPErK (a MATLAB program for Parametric Empirical Kriging)}
-Views computer experiments as gaussian stochastic process.\\
+\frametitle{PErK and MPErK (a MATLAB program for Parametric Empirical Kriging)}
+Freely available code accompanying Santner, Williams and Notz text. \\ Views computer experiments as gaussian stochastic process.\\
 \begin{align*}
      Y(x)= \beta^Tf(x) + z(x)   
 \end{align*}
