--- a/doc/talk.tex
+++ b/doc/talk.tex
@@ -121,10 +121,10 @@ The inner product of $h(\eta)$ and $j$th basis function $\psi_j$ is $<h(\eta), \
 \end{equation}
 Due to orthogonality of basis:
 \begin{equation}
-     <h(\eta), \Psi_j (\eta) >= a_i<\Psi_i (\eta), \Psi_j (\eta)> \label{eq:pcq-inner-product-orthogonal}
+     <h(\eta), \Psi_j (\eta) >= a_j<\Psi_j (\eta), \Psi_j (\eta)> \label{eq:pcq-inner-product-orthogonal}
 \end{equation}
 \begin{equation}
-     a_i= \frac{<h(\eta), \Psi_j (\eta) >}{<\Psi_i (\eta), \Psi_i (\eta)>}\label{eq:pcq-coef}
+     a_j= \frac{<h(\eta), \Psi_j (\eta) >}{<\Psi_j (\eta), \Psi_j (\eta)>}\label{eq:pcq-coef}
 \end{equation}
 \end{frame}
 %-------------------------------------------------------------
